--- a/messaging_app/Dockerfile
+++ b/messaging_app/Dockerfile
@@ -16,10 +16,24 @@ ENV PYTHONUNBUFFERED 1
 # Set work directory
 WORKDIR /messaging_app
 
+# Install system dependencies for mysqlclient and pip
+RUN apt-get update && apt-get install -y \
+    gcc \
+    default-libmysqlclient-dev \
+    pkg-config \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
 
 # Install dependencies
-COPY ./requirements.txt .
-RUN pip install -r requirements.txt
+COPY ./requirements.txt Requirements.txt
+RUN pip install --no-cache-dir -r Requirements.txt
 
 # Copy project
 COPY . .
+
+# Expose the port your Django app runs on
+EXPOSE 8000
+
+# Run the Django application
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
