--- a/messaging_app/messaging_app/docker-compose.yml
+++ b/messaging_app/messaging_app/docker-compose.yml
@@ -7,5 +7,26 @@ services:
     command: python3 manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/messaging_app
+    environment:
+      - DB_HOST=db
+      - DB_PORT=3306
+      - DB_NAME=alx_travel_app_0x00
+      - DB_USER=alx_travel_app
+      - DB_PASSWORD=2222
+    depends_on:
+      - db
   
   db:
+    image: mysql:5.7
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: 2222
+      MYSQL_DATABASE: alx_travel_app_0x00
+      MYSQL_USER: alx_travel_app
+      MYSQL_PASSWORD: 2222
+    volumes:
+      - db_data:/var/lib/mysql
+
+volumes:
+  db_data:
